# moxy

./: .gitignore  Cargo.toml  README.md  justfile
core/: Cargo.toml
core/src/: builder.rs  builder_test.rs  configuration.rs  configuration_test.rs  data_loader.rs  main.rs  router.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: builder.rs  configuration.rs  configuration_test.rs  data_loader.rs  main.rs  router.rs
src/builder/: builder.rs  builder_test.rs  core.rs  mod.rs  request.rs  storage.rs  ws.rs
src/builder/request/: http.rs  mod.rs  util.rs  ws.rs
