[package]
name = "moxy"
version = "0.1.0"
authors = ["micmine <micmine4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"]}
hyper-tls = "0.5"
hyper-tungstenite = "0.8.0"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.10"
