[package]
name = "moxy"
version = "0.1.0"
authors = ["micmine <micmine4@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3.21"
hyper = { version = "0.14", features = ["full"]}
hyper-tls = "0.5"
hyper-tungstenite = "0.9.0"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14.0"
reqwest = "0.11.10"
mime = "0.3.16"
mime_guess = "2.0.4"
