[package]
name = "mockit"
version = "0.1.0"
authors = ["micmine <micmine4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"]}
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cached = "0.34.0"
